--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,6 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
+    <img src={{site.avatar}}>
     <div class="sidebar-about">
       <h1>
         <a href="{{ site.baseurl }}">
