adding cv + publications

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,9 +27,9 @@
         {% endif %}
       {% endfor %}
 
-      <!--a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span-->
+      <a class="sidebar-nav-item" href="/resources/parashar_cv_04_2021.pdf">Resume/CV</a>
+      <a class="sidebar-nav-item" href="https://scholar.google.com/citations?user=XaD54D8AAAAJ&hl=en">Publications</a>
+      <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
