--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -248,3 +248,12 @@ a.sidebar-nav-item:focus {
 .theme-base-0f .related-posts li a:hover {
   color: #8f5536;
 }
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 45.00%;
+  padding: 5px;
+}
