--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
   {% include head.html %}
 
-  <body class="layout-reverse">
-
+  <body class="layout-reverse theme-base-0d">
     {% include sidebar.html %}
 
-    <div class="content container">
-      {{ content }}
-    </div>
-
+    <div class="content container">{{ content }}</div>
   </body>
 </html>
