--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="{{site.url}}/public/css/poole.css">
   <link rel="stylesheet" href="{{site.url}}/public/css/syntax.css">
   <link rel="stylesheet" href="{{site.url}}/public/css/hyde.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
-  <!-- <link rel="stylesheet" href="{{ site.url }}public/css/font.css"> -->
+  <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"> -->
+  <link rel="stylesheet" href="{{ site.url }}/public/css/font.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="144x144" href="{{site.url}}/public/apple-touch-icon.png">
