--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -13,7 +13,6 @@
  * https://github.com/poole/hyde.
  */
 
-
 /*
  * Contents
  *
@@ -23,7 +22,6 @@
  * Reverse layout
  * Themes
  */
-
 
 /*
  * Global resets
@@ -45,7 +43,6 @@ html {
   }
 }
 
-
 /*
  * Sidebar
  *
@@ -56,7 +53,7 @@ html {
 .sidebar {
   text-align: center;
   padding: 2rem 1rem;
-  color: rgba(255,255,255,.5);
+  color: rgba(255, 255, 255, 0.5);
   background-color: #202020;
 }
 @media (min-width: 48em) {
@@ -108,12 +105,11 @@ a.sidebar-nav-item:focus {
 @media (min-width: 48em) {
   .sidebar-sticky {
     position: absolute;
-    right:  1rem;
+    right: 1rem;
     bottom: 1rem;
-    left:   1rem;
+    left: 1rem;
   }
 }
-
 
 /* Container
  *
@@ -122,14 +118,14 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
-  padding-top:    4rem;
+  padding-top: 4rem;
   padding-bottom: 4rem;
   text-align: justify;
 }
 
 @media (min-width: 48em) {
   .content {
-    max-width: 50rem;
+    max-width: 60rem;
     margin-left: 10rem;
     margin-right: 2rem;
   }
@@ -141,7 +137,6 @@ a.sidebar-nav-item:focus {
     margin-right: 4rem;
   }
 }
-
 
 /*
  * Reverse layout
@@ -166,8 +161,6 @@ a.sidebar-nav-item:focus {
     margin-right: 22rem;
   }
 }
-
-
 
 /*
  * Themes
@@ -255,6 +248,6 @@ a.sidebar-nav-item:focus {
 }
 
 .column {
-  flex: 45.00%;
+  flex: 45%;
   padding: 5px;
 }
