--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,34 +1,34 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
-    <img src={{site.avatar}}>
+    <img src="{{site.avatar}}" />
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.url }}">
-          {{ site.title }}
-        </a>
+        <a href="{{ site.url }}"> {{ site.title }} </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}" href="{{ site.url }}">Home</a>
+      <a
+        class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}"
+        href="{{ site.url }}"
+        >Home</a
+      >
 
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
+      {% comment %} The code below dynamically generates a sidebar nav of pages with
+      `layout: page` in the front-matter. See readme for usage. {% endcomment %} {%
+      assign pages_list = site.pages %} {% for node in pages_list %} {% if node.title !=
+      null %} {% if node.layout == "page" %}
+      <a
+        class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
+        href="{{ site.url }}{{ node.url }}"
+        >{{ node.title }}</a
+      >
+      {% endif %} {% endif %} {% endfor %}
 
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.url }}{{ node.url }}">{{ node.title }}</a>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
-
-      <a class="sidebar-nav-item" href="{{site.url}}/resources/parashar_cv_04_2021.pdf">Resume/CV</a>
-      <a class="sidebar-nav-item" href="https://scholar.google.com/citations?user=XaD54D8AAAAJ&hl=en">Publications</a>
+      <a class="sidebar-nav-item" href="{{site.url}}/resources/parashar_cv_05_2021.pdf"
+        >Resume/CV</a
+      >
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
 
